tests/expectations/compiler/async_blocks/future_in_composite_fail.out
Error [ETYC0372114]: A struct cannot contain a Final.
    --> compiler-test:2:5
     |
   2 |     member: Final,
     |     ^^^^^^
Error [ETYC0372031]: A mapping's key cannot be a future
    --> compiler-test:6:5
     |
   6 |     mapping x: Final => Final;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372031]: A mapping's value cannot be a future
    --> compiler-test:6:5
     |
   6 |     mapping x: Final => Final;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372115]: An array cannot have a Final as an element type.
    --> compiler-test:11:9
     |
  11 |         let an_array: [Final; 1] = [future];
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
